--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "owen-oj/laravel-getid3": "^2.1",
+        "pbmedia/laravel-ffmpeg": "^8.1",
+        "php-ffmpeg/php-ffmpeg": "^1.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
